# maws

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  docs.md  pyproject.toml
.github/workflows/: ci.yaml
experimental/: app.py  client.py  example_usage.py  jtl_scraper.py  quickstart.py
src/cli/: a4f.py  a4f_details.py  a4f_merger.py  aof.py  goa.py  main.py
src/maws/: __init__.py  client.py  config.py  models.py  parser.py  playwright.py  urls.py
src/maws/a4f/: client.py
src/maws/aof/: client.py  playwright.py
src/maws/goa/: client.py  config.py  parser.py
